--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/NetComp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ini4j-0.5.2-SNAPSHOT.jar=/home/zerg/netbeans-7.2/ini4j/ini4j-0.5.2-SNAPSHOT.jar
 file.reference.ini4j.jar=/usr/share/java/ini4j.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -35,7 +36,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.ini4j.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.ini4j-0.5.2-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
