--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,8 @@ dist.jar=${dist.dir}/NetComp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ini4j-0.5.2-SNAPSHOT.jar=/home/zerg/netbeans-7.2/ini4j/ini4j-0.5.2-SNAPSHOT.jar
 file.reference.ini4j.jar=/usr/share/java/ini4j.jar
+file.reference.ini4j.jar-1=/usr/share/java/ini4j.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -37,7 +37,7 @@ javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.ini4j.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.ini4j-0.5.2-SNAPSHOT.jar}
+    ${file.reference.ini4j.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
