--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ini4j.jar=/usr/share/java/ini4j.jar
+file.reference.ini4j.jar-1=/usr/share/java/ini4j.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -35,7 +36,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.ini4j.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.ini4j.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
