Librería ini4j duplicada fue removida

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.ini4j.jar}:\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.ini4j.jar-1}
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
