Conexiones de clases 2 iteración
Al conectarse a una clase ahora NetComp toma el nombre y el apellido del alumno del archivo de configuración.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [configuracion]
-nombre = sababa
-apellido = portmap
-curso = daskjdbkjbads
+primeraVez = 0
+nombre = Marcelo
+apellido = Malavolta
+curso = 
 
