Conexiones de alumnos finalizada.
En esta versión se actualiza a todos los alumnos de la conexión o desconexión de otros alumnos a las clase. Además, si se cierra la clase, todos los alumnos se desconectan en forma limpia. Se optimizó el mecanismo de conexión de alumnos a clases, y se implementaron los métodos para enviar mensajes a todas las conexiones mediante la iteración, y cerrar las clases y sockets limpiamente.

Se modificaron además todos los I/O de sockets, por ObjectStreams.

TODO: 

Vincular envío de mensajes a eventos en el GUI.
Implementar envío de archivos. (GUI y Mecanismos de envío y recepción)
Implementar envío de pantalla. (GUI y Mecanismos de envío y recepción)

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [configuracion]
-primeraVez = 0
-nombre = Marcelo
-apellido = Malavolta
+primeraVez = 1
+nombre = Javier
+apellido = Rodriguez
 curso = 
 
