Vinculación de eventos al GUI
En esta versión se implementó la lógica de comunicación entre el GUI y los manejadores de conexiones, a través de listas bloqueantes. Para esto se generó una clase TipoEventos, a partir de la cual se instancian objetos de control, para insertar en la lista bloqueante de cada conexión, la cual está bloqueada esperando el evento.

Se modificaron los Arrays por colecciones y sets, con propiedades de sorting y bloqueantes, para manejar correctamente problemas de concurrencias en los threads que manejan conexiones, en procesos de tipo "productor-consumidor".

TODO: 

Implementar envío de archivos. (GUI y Mecanismos de envío y recepción)
Implementar envío de pantalla. (GUI y Mecanismos de envío y recepción)

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [configuracion]
-primeraVez = 1
-nombre = Javier
-apellido = Rodriguez
-curso = 
+primeraVez = 0
+nombre = felix
+apellido = El Gato
+curso = fFF405820
 
