Envío y recepción de Archivos (GUI y Mecanismos)
En esta versión, funciona correctamente el sistema de envío y recepción de archivos. Se establecieron nuevos Threads de envío y recepción de archivos, junto con el sistema GUI para que el profesor pueda compartir los archivos deseados, y los alumnos puedan ver la lista de esos archivos compartidos. 

Luego, en la lista de selección de archivos, el alumno puede seleccionar que archivo bajar y donde guardarlo en su disco. Una vez hecho esto, comienzan los Threads de envío y recepción.

TODO: 

Implementar envío de pantalla. (GUI y Mecanismos de envío y recepción)

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [configuracion]
 primeraVez = 0
-nombre = felix
-apellido = El Gato
-curso = fFF405820
+nombre = Matias
+apellido = Fritz
+curso = 5to Inf.
 
