Envío de pantalla - GUI y Mecanismos de envío y recepción
En esta versión, el programa implementa compartir escritorio. El profesor puede compartir su escritorio a todos los alumnos conectados a su clase. Se modificaron las ventanas, organización y estética de las ventanas, agregando imágenes y organizando la lógica utilización del programa.

TODO:

Quedan corregir detalles menores.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/NetComp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.imgscalr-lib-4.2.jar=/home/zerg/Escritorio/prueba/imgscalr-lib-4.2/imgscalr-lib-4.2.jar
 file.reference.ini4j.jar=/usr/share/java/ini4j.jar
 file.reference.ini4j.jar-1=/usr/share/java/ini4j.jar
 includes=**
@@ -36,7 +37,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.ini4j.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.imgscalr-lib-4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
